--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi-slim>=0.115.14",
+    "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
 ]
