--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.16.2",
     "fastapi-slim>=0.115.14",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
