--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.2",
     "fastapi-slim>=0.115.14",
+    "loguru>=0.7.3",
     "python-slugify>=8.0.4",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
