--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.2",
+    "asyncpg>=0.30.0",
     "fastapi-slim>=0.115.14",
     "loguru>=0.7.3",
     "python-slugify>=8.0.4",
