--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alembic>=1.16.2",
     "asyncpg>=0.30.0",
     "fastapi-slim>=0.115.14",
+    "greenlet>=3.2.3",
     "loguru>=0.7.3",
     "python-slugify>=8.0.4",
     "sqlalchemy>=2.0.41",
