Add auth.py, bcript

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.2",
     "asyncpg>=0.30.0",
+    "bcrypt==4.0.1",
     "fastapi-slim>=0.115.14",
     "greenlet>=3.2.3",
     "loguru>=0.7.3",
+    "passlib>=1.7.4",
     "python-slugify>=8.0.4",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
