--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "greenlet>=3.2.3",
     "loguru>=0.7.3",
     "passlib>=1.7.4",
+    "python-multipart>=0.0.20",
     "python-slugify>=8.0.4",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
