Add permission router and jwt

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "greenlet>=3.2.3",
     "loguru>=0.7.3",
     "passlib>=1.7.4",
+    "python-dotenv>=1.1.1",
+    "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "python-slugify>=8.0.4",
     "sqlalchemy>=2.0.41",
